# mcp-gateway

./: .env.example  .gitignore  .pr_details.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json  team_announcement.md
.github/workflows/: docker.yml  release.yml  test.yml
baml_src/: generators.baml  summarize.baml
examples/: sample-backends.mcp.json
src/mcp_gateway/: __init__.py  __main__.py  cli.py  errors.py  server.py  types.py
src/mcp_gateway/client/: manager.py
src/mcp_gateway/config/: loader.py
src/mcp_gateway/manifest/: __init__.py  environment.py  installer.py  loader.py  manifest.yaml  matcher.py  refresher.py  version_checker.py
src/mcp_gateway/policy/: policy.py
src/mcp_gateway/summary/: __init__.py  generator.py  llm_summarizer.py  template_fallback.py
src/mcp_gateway/tools/: handlers.py
src/pmcp/: server.py
tests/: conftest.py  test_cli.py  test_client_manager.py  test_config_loader.py  test_errors.py  test_identity.py  test_integration.py  test_manifest.py  test_policy.py  test_refresher.py  test_server.py  test_server_lifecycle.py  test_summary.py  test_tools.py  test_version_checker.py
