[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateway-mcp"
version = "1.0.0"
description = "MCP Gateway - A meta-server for minimal Claude Code tool bloat with progressive disclosure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ViperJuice", email = "viperjuice@users.noreply.github.com" }
]
keywords = ["mcp", "claude", "gateway", "anthropic", "llm", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Repository = "https://github.com/ViperJuice/mcp-gateway"
Homepage = "https://github.com/ViperJuice/mcp-gateway"
Issues = "https://github.com/ViperJuice/mcp-gateway/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
]
llm = [
    "baml-py>=0.215.0",
]
all = [
    "gateway-mcp[dev,llm]",
]

[project.scripts]
mcp-gateway = "mcp_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/mcp_gateway/baml_client"]

[tool.coverage.run]
source = ["src/mcp_gateway"]
omit = ["src/mcp_gateway/baml_client/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 60
show_missing = true
skip_covered = true
